<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_marginBottom="26dp"
        android:id="@+id/toolbar"
        app:titleTextColor="@android:color/white"/>

    <RelativeLayout
        android:layout_below="@+id/toolbar"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.mariorsjr.sorteador.MainActivity"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout_numbers">
            <EditText
                android:maxLength="10"
                android:id="@+id/editTextMinNumber"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/minNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:maxLength="10"
                android:id="@+id/editTextMaxNumber"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/maxNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <!---->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/linearLayout_quantidade"
            android:layout_below="@id/linearLayout_numbers">

            <EditText
                android:id="@+id/edtQuantidade"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/edt_quantidade"
                android:inputType="number"
                android:text="1" />

            <Button
                android:id="@+id/buttonReset"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.66"
                android:text="@string/reset" />
        </LinearLayout>

        <LinearLayout

            android:id="@+id/linearLayout_options"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/linearLayout_quantidade"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switchRepetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withoutRepetition" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDrawn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_below="@+id/linearLayout_options"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:focusable="false"
            android:textSize="50sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonDoRaffle"
            android:text="@string/raffe"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@+id/linearLayout_options"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textViewSorteados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:focusable="false"
            android:text="Sorteados"
            android:textSize="20sp"
            android:layout_below="@+id/buttonDoRaffle"
            android:layout_alignParentStart="true" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textViewSorteados"
            android:focusable="false">

            <TextView
                android:id="@+id/textViewDrawnNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:textSize="20sp" />
        </ScrollView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <com.google.android.gms.ads.AdView

            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>


</RelativeLayout>